--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8"/>
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-  <link rel="stylesheet" href="css/reset.css"/>
-  <link rel="stylesheet" href="css/style.css"/>
-  <link rel="stylesheet" href="css/animations.css"/>
+  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+  <link rel="stylesheet" href="js/lib/reset-css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/animations.css" />
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-
-  <link rel="stylesheet" href="css/react-datetime.css">
-  <link rel="stylesheet" href="css/cropper.css">
-  <link rel="stylesheet" href="css/spectrum.css">
-
-  <link rel="stylesheet" href="css/open-sans.css">
+  <link rel="stylesheet" href="js/lib/font-awesome/css/font-awesome.min.css">
 
 </head>
+
 <body>
-	<div id="container">
+  <div id="container">
 </body>
+
 </html>
 
 <script type="module" src="js/index.js"></script>
