--- a/www/rich-editor/index.html
+++ b/www/rich-editor/index.html
@@ -7,6 +7,10 @@
   <script src="../js/lib/jquery/dist/jquery.min.js"></script>
   <link href="../js/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../js/lib/summernote/dist/summernote.min.css" rel="stylesheet">
+  <link href="../js/lib/codemirror/addon/search/matchesonscrollbar.css" rel="stylesheet">
+  <link href="../js/lib/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet">
+  <link href="../js/lib/codemirror/addon/hint/show-hint.css" rel="stylesheet">
+  <link href="../js/lib/codemirror/lib/codemirror.css" rel="stylesheet">
   <script src="../js/lib/summernote/dist/summernote.min.js"></script>
 
 </head>
