admin controls migrate to css styles

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <link rel="stylesheet" href="js/lib/reset-css/reset.css" />
+  <link rel="stylesheet" href="css/consts.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/debug-style.css" />
   <link rel="stylesheet" href="css/animations.css" />
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   <link rel="stylesheet" href="js/lib/font-awesome/css/font-awesome.min.css">
