--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="js/lib/reset-css/reset.css" />
   <link rel="stylesheet" href="js/lib/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="js/lib/react-datetime/css/react-datetime.css">
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/debug-style.css" />
   <link rel="stylesheet" href="css/animations.css" />
+  <link rel="stylesheet" href="js/views/view_5_users.css" />
 
 </head>
 
