--- a/www/index.html
+++ b/www/index.html
@@ -25,5 +25,6 @@
 </body>
 
 </html>
+<script src="../js/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="/dist/index.js"></script>
 
-<script type="module" src="js/index.js"></script>
