before default exports remove

--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="js/node_modules/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="js/node_modules/react-datetime/css/react-datetime.css">
   <link rel="stylesheet" href="js/node_modules/cropperjs/dist/cropper.min.css">
-  <link href="../js/node_modules/codemirror/addon/search/matchesonscrollbar.css" rel="stylesheet">
-  <link href="../js/node_modules/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet">
-  <link href="../js/node_modules/codemirror/addon/hint/show-hint.css" rel="stylesheet">
-  <link href="../js/node_modules/codemirror/lib/codemirror.css" rel="stylesheet">  <link rel="stylesheet" href="css/consts.css" />
+  <link href="js/node_modules/codemirror/addon/search/matchesonscrollbar.css" rel="stylesheet">
+  <link href="js/node_modules/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet">
+  <link href="js/node_modules/codemirror/addon/hint/show-hint.css" rel="stylesheet">
+  <link href="js/node_modules/codemirror/lib/codemirror.css" rel="stylesheet">  <link rel="stylesheet" href="css/consts.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/debug-style.css" />
   <link rel="stylesheet" href="css/animations.css" />
@@ -25,6 +25,6 @@
 </body>
 
 </html>
-<script src="../js/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="/dist/index.js"></script>
+<script src="js/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="dist/bundle.js"></script>
 
