rich editor bundling

--- a/www/rich-editor/index.html
+++ b/www/rich-editor/index.html
@@ -7,17 +7,13 @@
   <script src="../js/node_modules/jquery/dist/jquery.min.js"></script>
   <link href="../js/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../js/node_modules/summernote/dist/summernote.min.css" rel="stylesheet">
-  <link href="../js/node_modules/codemirror/addon/search/matchesonscrollbar.css" rel="stylesheet">
-  <link href="../js/node_modules/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet">
-  <link href="../js/node_modules/codemirror/addon/hint/show-hint.css" rel="stylesheet">
-  <link href="../js/node_modules/codemirror/lib/codemirror.css" rel="stylesheet">
   <script src="../js/node_modules/summernote/dist/summernote.min.js"></script>
 
 </head>
 
 <body>
   <div id="summernote"></div>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="../dist/rich-editor.bundle.js"></script>
 </body>
 
 </html>
