--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,10 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   <link rel="stylesheet" href="js/node_modules/reset-css/reset.css" />
-  <link rel="stylesheet" href="js/node_modules/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="js/node_modules/react-datetime/css/react-datetime.css">
-  <link rel="stylesheet" href="js/node_modules/cropperjs/dist/cropper.min.css">
-  <link href="js/node_modules/codemirror/addon/search/matchesonscrollbar.css" rel="stylesheet">
-  <link href="js/node_modules/codemirror/addon/scroll/simplescrollbars.css" rel="stylesheet">
-  <link href="js/node_modules/codemirror/addon/hint/show-hint.css" rel="stylesheet">
-  <link href="js/node_modules/codemirror/lib/codemirror.css" rel="stylesheet">  <link rel="stylesheet" href="css/consts.css" />
+  <link rel="stylesheet" href="js/node_modules/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="js/node_modules/react-datetime/css/react-datetime.css" />
+  <link rel="stylesheet" href="js/node_modules/cropperjs/dist/cropper.min.css" />
+  <link rel="stylesheet" href="css/consts.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/debug-style.css" />
   <link rel="stylesheet" href="css/animations.css" />
@@ -26,5 +23,5 @@
 
 </html>
 <script src="js/node_modules/jquery/dist/jquery.min.js"></script>
-<script src="dist/bundle.js"></script>
+<script src="dist/main.bundle.js"></script>
 
