--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/consts.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/debug-style.css" />
+  <link rel="stylesheet" href="css/restrictions-style.css" />
   <link rel="stylesheet" href="css/animations.css" />
   <link rel="stylesheet" href="js/views/view_5_users.css" />
 
