--- a/www/rich-editor/index.html
+++ b/www/rich-editor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Summernote</title>
+  <title>SummerNote</title>
   <script src="../js/node_modules/jquery/dist/jquery.min.js"></script>
   <link href="../js/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../js/node_modules/summernote/dist/summernote.min.css" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div id="summernote"></div>
+  <div id="summer-note"></div>
   <script type="module" src="../dist/rich-editor.bundle.js"></script>
 </body>
 
