--- a/www/custom/html/ff2.html
+++ b/www/custom/html/ff2.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>${name}</title>
+<title>f1</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body style="font-family: sans-serif;">
-<h1>${name}</h1>
-${body}
+<h1>f1</h1>
+<p>fffff cccergteg gjghgjh cvdmjh/hj</p>
 </body>
 
 </html>
