--- a/www/custom/html/new_page.html
+++ b/www/custom/html/new_page.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>${name}</title>
+<title>New Page</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body style="font-family: sans-serif;">
-<h1>${name}</h1>
-${body}
+<h1>New Page</h1>
+<p>Page content here</p>
 </body>
 
 </html>
