js to src folder rename

--- a/www/index.html
+++ b/www/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="js/node_modules/reset-css/reset.css" />
-  <link rel="stylesheet" href="js/node_modules/font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="js/node_modules/react-datetime/css/react-datetime.css" />
-  <link rel="stylesheet" href="js/node_modules/cropperjs/dist/cropper.min.css" />
+  <link rel="stylesheet" href="src/node_modules/reset-css/reset.css" />
+  <link rel="stylesheet" href="src/node_modules/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="src/node_modules/react-datetime/css/react-datetime.css" />
+  <link rel="stylesheet" href="src/node_modules/cropperjs/dist/cropper.min.css" />
   <link rel="stylesheet" href="css/consts.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/debug-style.css" />
   <link rel="stylesheet" href="css/animations.css" />
-  <link rel="stylesheet" href="js/views/view_5_users.css" />
+  <link rel="stylesheet" href="src/views/view_5_users.css" />
 
 </head>
 
@@ -22,6 +22,6 @@
 </body>
 
 </html>
-<script src="js/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="src/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="dist/main.bundle.js"></script>
 
