dev build via showpack

--- a/www/rich-editor/index.html
+++ b/www/rich-editor/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>SummerNote</title>
-  <script src="../src/node_modules/jquery/dist/jquery.min.js"></script>
-  <link href="../src/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../src/node_modules/summernote/dist/summernote.min.css" rel="stylesheet">
-  <script src="../src/node_modules/summernote/dist/summernote.min.js"></script>
+  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/node_modules/summernote/dist/summernote.min.css" rel="stylesheet">
+  <script src="/node_modules/summernote/dist/summernote.min.js"></script>
 
 </head>
 
 <body>
   <div id="summer-note"></div>
-  <script type="module" src="../dist/rich-editor.bundle.js"></script>
+  <script type="module" src="rich-editor-main.js"></script>
 </body>
 
 </html>
