--- a/www/index.html
+++ b/www/index.html
@@ -23,5 +23,6 @@
 
 </html>
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<script type="module" src="src/index.js"></script>
+<!--script type="module" src="src/index.js"></script -->
+<script type="module" src="dist/main.bundle.js"></script>
 
