--- a/www/index.html
+++ b/www/index.html
@@ -5,24 +5,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="/node_modules/reset-css/reset.css" />
-  <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="/node_modules/react-datetime/css/react-datetime.css" />
-  <link rel="stylesheet" href="/node_modules/cropperjs/dist/cropper.min.css" />
-  <link rel="stylesheet" href="css/consts.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/debug-style.css" />
-  <link rel="stylesheet" href="css/animations.css" />
-  <link rel="stylesheet" href="../src/views/view_5_users.css" />
-
 </head>
 
 <body>
-  <div id="container">
+  <div id="container"></div>
 </body>
 
 </html>
-<script src="/node_modules/jquery/dist/jquery.min.js"></script>
-<!--script type="module" src="src/index.js"></script -->
-<script type="module" src="dist/main.bundle.js"></script>
+<script type="module" src="./src/index.ts"></script>
 
