--- a/www/src/rich-editor/index.html
+++ b/www/src/rich-editor/index.html
@@ -4,16 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>SummerNote</title>
-  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-  <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/node_modules/summernote/dist/summernote.min.css" rel="stylesheet">
-  <script src="/node_modules/summernote/dist/summernote.min.js"></script>
-
 </head>
 
 <body>
   <div id="summer-note"></div>
-  <script type="module" src="rich-editor-main.js"></script>
+  <script type="module" src="./rich-editor-main.ts"></script>
 </body>
 
 </html>
