--- a/www/index.html
+++ b/www/index.html
@@ -12,5 +12,5 @@
 </body>
 
 </html>
-<script type="module" src="./client-core/src/index.ts"></script>
+<script type="module" src="./src/index.ts"></script>
 
